welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.error
FlowerPot:22: error: ')' expected but ';' found.
  fleur(Color.green();
                     ^